--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env]
+monitor_speed = 115200
+
+
 [env:uno]
 platform = atmelavr
 board = uno
 framework = arduino
-
-
-
